--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" href="fontawesome.min.css">
 		<link rel="stylesheet" href="fakeLoader.min.css">
 		<link rel="stylesheet" href="hoverbuttons.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.1.1/css/all.min.css" integrity="sha512-ioRJH7yXnyX+7fXTQEKPULWkMn3CqMcapK0NNtCN8q//sW7ZeVFcbMJ9RvX99TwDg6P8rAH2IqUSt2TLab4Xmw=="/>
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body>
